# replicalab-ai

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  Dockerfile  Dockerfile.train  README.md  ReplicaLab_50_Scenarios_Training_Plan.md  ReplicaLab_Blueprint.md  ReplicaLab_Comprehensive_Task_Division.md  ReplicaLab_Master_Blueprint.md  hackathon_guidelines.md  openenv.yaml  pyproject.toml  requirements-train.txt
.claude/: settings.local.json
.github/: pull_request_template.md
docs/: Advanced_Llama3_2_(3B)_GRPO_LoRA.ipynb  agt11_scientist_model_selection.md  changes.md  completion.md  demo_script.md  demo_video_script_60s.md  fnd08_frozen_json_contract.md  pitch_outline.md  project_management_rules.md  recording_guide.md  submission_prep.md  training_goals.md  ui_smoke_checklist.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
notebooks/: cell_15_fix.py  cell_16_fix.py  grpo_training.ipynb  grpo_training2.ipynb  train_colab.ipynb  train_minimal_colab.ipynb
replicalab/: __init__.py  cache.py  client.py  config.py  models.py  oracle.py  oracle_models.py
scripts/: build_demo_video.py  run_episode.py  train.sh
server/: Dockerfile  app.py  requirements.txt
tests/: test_api_rest_isolation.py  test_audit_contract.py  test_cache.py  test_client.py  test_config.py  test_env.py  test_integration.py  test_judge_policy.py  test_lab_manager_policy.py  test_llm_judge.py  test_local_eval.py  test_logging.py  test_mod08_schemas.py  test_models.py  test_notebooks.py  test_oracle.py  test_prompts.py  test_reward.py  test_rollout.py  (+10 more)
(+215 files in other folders)
