[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "replicalab"
version = "0.1.0"
description = "ReplicaLab foundation package for multi-agent scientific replication experiments."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "ReplicaLab Team" },
]
dependencies = [
  "pydantic>=2.7,<3.0",
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.34,<1.0",
  "websockets>=15.0,<17.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-cov>=5.0,<6.0",
  "pytest-asyncio>=0.23,<1.0",
  "httpx>=0.27,<1.0",
  "ruff>=0.11,<0.12",
  "mypy>=1.15,<2.0",
]

[tool.setuptools.packages.find]
include = ["replicalab*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
